# gnostr_rs

./: Cargo.toml  GNUmakefile  cargo.mk  tests.mk
.github/workflows/: ci.yml  publish.yml  release.yml
src/: bech32.rs  events.rs  keys.rs  lib.rs  nostr_client.rs  utils.rs
src/nips/: nip1.rs  nip11.rs  nip13.rs  nip16.rs  nip2.rs  nip25.rs  nip4.rs  nip5.rs  nip9.rs
