[package]
name = "gnostr_rs"
version = "0.0.5"
description = "git+nostr workflow utility"
documentation = "https://docs.rs/nostr_rust"
readme = "README.md"
repository = "https://github.com/gnostr-org/gnostr_rs"
homepage = "https://github.com/gnostr-org/gnostr_rs"
keywords = ["nostr", "gnostr", "protocol", "encryption", "decryption"]
categories = ["api-bindings"]
license = "MIT"
authors = ["gnostr <admin@gnostr.org>", "Thomas Tastet"]
edition = "2021"

[features]
# Sync by default
default = ["sync"]
async = ["futures", "tokio", "futures-util"]
sync = ["reqwest/blocking"]


[[bin]]
name = "gnostr"
path = "src/bin/gnostr.rs"
#required-features = ["test-fakes"]
doc = true

[[bin]]
name = "gnostr_dashboard"
path = "src/bin/gnostr_dashboard.rs"
#required-features = ["test-fakes"]
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_derive = "1"
sha256 = "1"
hex = "0.4"
bech32 = "0.9"
rand = "0.8"
secp256k1 = { version = "0.26", features = ["bitcoin_hashes", "global-context", "rand-std"] }
tungstenite = { version = "0.18", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.18", default-features = true, features = ["handshake", "rustls-tls-webpki-roots"] }
url = "2.3"
base64 = "0.21"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
thiserror = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
tokio = { version = "1.24", optional = true, features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "gnostr-org/homebrew-gnostr-org"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = true
